Fix layout on mobile

--- a/src/components/layout/_layout.scss
+++ b/src/components/layout/_layout.scss
@@ -13,7 +13,7 @@ $layoutGapWidth: gutter(5 / 6);
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    max-width: $layoutMaxWidth;
+    max-width: 100%;
     margin: $layoutContainerMarginTop auto;
 
     @include sgBreakpoint(medium-up) {
